--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ek-coder.github.io/Traffic-Hive",
   "name": "traffichive",
   "private": true,
   "version": "0.0.0",
@@ -11,8 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.4.7",
+    "start": "react-scripts start",
+  "build": "react-scripts build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  "chart.js": "^4.4.7",
     "framer-motion": "^10.18.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
